Fixed overflow

--- a/src/components/bigChartBox/bigChartBox.scss
+++ b/src/components/bigChartBox/bigChartBox.scss
@@ -1,2 +1,12 @@
 .bigChartBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+
+  .chart {
+    width: 100%;
+    height: 300px;
+  }
 }
