--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 30px;
+  padding: 25px;
 
   span {
     &:first-child {
