--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,7 @@ a {
   font-family: 'Inter', sans-serif;
   background-color: $main-bg;
   color: $main-color;
+  overflow: hidden;
 }
 .container {
   display: flex;
